Added PluginLoader functionality so that the plugins can be independently loaded